feat: edit base on comment